# Categorical

./: CHANGELOG.md  Categorical.cabal  README.md  cabal.project
NN/: NN.cabal
NN/src/: Category.hs  Functor.hs  Layer.hs  Training.hs
chemistry/: README.md  chemistry.cabal
chemistry/src/: Geometry.hs  Orbital.hs  TypedNN.hs
core/: README.md
core/src/Core/: .keep
docs/: architecture.md
examples/: README.md  examples.cabal
examples/src/: Hybridization.hs  Main.hs  OrbitalTest.hs  XOR.hs
results/: XOR_losses.txt  loss_graph.py
src/: Category.hs  Example.hs  Functor.hs  Layer.hs  Main.hs  Training.hs
