cabal-version:       2.4
name:                chemistry
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
extra-source-files:  ../CHANGELOG.md, ../README.md

library
  exposed-modules:     Orbital, Geometry, TypedNN
  hs-source-dirs:      src
  build-depends:       base ^>=4.13.0.0, NN
  default-language:    Haskell2010
