cabal-version:       2.4
name:                examples
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
extra-source-files:  ../CHANGELOG.md, ../README.md

executable xor-example
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       XOR
  build-depends:       base ^>=4.13.0.0, NN, chemistry, random, directory
  default-language:    Haskell2010
